[ENH] Transfer BEP023 Draft to bids-standard/bids-specification:bep023 (#2301)
Moving draft into bids-standard org and it's own bep branch

Spec renders, yaml lints, but rules/logic need work. Moving this here makes 
setting up the CI and running this on bids-standard/bids-examples:bep023 a 
bit more straight forward. Additionally, hoping to increase visibility and garner
some community/discussion ahead of community review.

* ENH: add petref suffix to schema

* ENH: create bep-023 schema json

* ENH: add petref suffix to schema

* ENH: add petref suffix to imaging.yaml

* added make command to make this BEP a bit easier

* Update Makefile

* update .gitignore

* added MC and started Smoothing checks

* update selector for smoothing and registration

* ENH: add transformation rules

* ENH: add petref to enums

* fixed check script updated sidecars

* added tabular entries for pet derivatives

* starting to render IRL

* Align's validator to bids-examples/petprep

Made some small changes to schema some relating to PET and
some small edits to other imaging to account for some "compiling"
errors encountered during the schema export/build. Meddling outside
of PET was limited to
- src/schema/rules/files/imaging.yaml
- src/schema/rules/dataset_metadata.yaml

The former had something to do with duplicate keys in the yaml and the
later was made to allow for dataset description jsons at both
/derivatives/dataset_description.json and
/derivatives/pipline_name/dataset_description.json

* remove data/ from tracked files

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* more cleanup

* remove glob from dataset_description rule

* move tabular rules to proper place

* fix formatting errors, latin phrases, etc

---------

Co-authored-by: Martin Norgaard <martin.noergaard@nru.dk>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
           - BIDS Derivatives: derivatives/introduction.md
           - Common data types and metadata: derivatives/common-data-types.md
           - Imaging data types: derivatives/imaging.md
+          - Positron Emission Tomography: derivatives/positron-emmision-tomography.md
           - Templates and atlases: derivatives/atlas.md
       - Longitudinal and multi-site studies: longitudinal-and-multi-site-studies.md
       - Glossary: glossary.md
