feat(beh): add `_audiovideo` suffix for combined audio-video recordings
- Add new `_audiovideo` suffix for files containing both audio and video streams
- Update documentation to distinguish between audio-only, video-only, and combined recordings
- Split AudioVideoStreams sidecar table into separate AudioStreams and VideoStreams tables
- Add example files and JSON sidecars for audiovideo recordings
- Update schema suffixes to include audiovideo definition

--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -535,6 +535,12 @@ audio:
     Audio recording of a behaving subject.
     This may include vocalizations, speech, or environmental sounds.
     The audio stream may be from a standalone audio recording or extracted from a video file.
+audiovideo:
+  value: audiovideo
+  display_name: Audio-Video Recording
+  description: |
+    Combined audio and video recording of a behaving subject.
+    This suffix is used for files that contain both audio and video streams.
 beh:
   value: beh
   display_name: Behavioral recording
