feat(beh): add support for still image recordings in behavioral experiments
Add `_image` suffix for storing still images captured during behavioral
experiments in the `beh` directory. Changes include:

- Add `.jpg` and `.png` as supported image file extensions
- Document use cases: pose estimation training frames, behavioral setup
  snapshots, and extracted video frames
- Update privacy/PII warnings to include images alongside audio/video
- Add ImageProperties sidecar table and example files
- Update AudioVideoDevice macro to AudioVideoImageDevice

--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -541,6 +541,13 @@ audiovideo:
   description: |
     Combined audio and video recording of a behaving subject.
     This suffix is used for files that contain both audio and video streams.
+behimage:
+  value: image
+  display_name: Behavioral Image
+  description: |
+    Still image captured during behavioral experiments.
+    This may include training frames for pose estimation, snapshots of behavioral setups,
+    or individual frames extracted from video recordings.
 beh:
   value: beh
   display_name: Behavioral recording
