feat(beh): add optional License field for audio/video/image recordings
- Add License field to AudioVideoImageDevice sidecar schema
- Update documentation to include images in audio/video section headings
- Add note explaining licensing considerations for recordings containing
  identifiable participant data

--- a/src/schema/rules/sidecars/beh.yaml
+++ b/src/schema/rules/sidecars/beh.yaml
@@ -34,6 +34,7 @@ AudioVideoImageDevice:
   fields:
     Device: optional
     DeviceSerialNumber: optional
+    License: optional
 
 AudioVideoDuration:
   selectors:
