--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -131,6 +131,8 @@ filename = "../../src/schema/SCHEMA_VERSION"
 line-length = 99
 
 [tool.ruff.lint]
+# Recognize imports from _lazytypes as coming from typing
+typing-modules = ["bidsschematools._lazytypes"]
 select = [
   "E",   # pycodestyle errors
   "W",   # pycodestyle warnings
