Description for activities

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -99,6 +99,12 @@ Activities:
           - type: string
             format: string
           - type: "null"
+      Description:
+        name: Description
+        description: 'Plain-text description of the activity
+
+          RECOMMENDED if `Command` is set to `null`.'
+        type: string
       AssociatedWith:
         name: AssociatedWith
         description: |
