Description for activities

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -101,9 +101,10 @@ Activities:
           - type: "null"
       Description:
         name: Description
-        description: 'Plain-text description of the activity
+        description: |
+          Plain-text description of the activity.
 
-          RECOMMENDED if `Command` is set to `null`.'
+          RECOMMENDED if `Command` is set to `null`.
         type: string
       AssociatedWith:
         name: AssociatedWith
