--- a/src/schema/rules/sidecars/continuous.yaml
+++ b/src/schema/rules/sidecars/continuous.yaml
@@ -14,15 +14,14 @@ Continuous:
     StartTime: required
     Columns: required
 
-# Other recommended metadata for physiological data
 PhysioHardware:
   selectors:
     - suffix == "physio"
   fields:
-    DeviceSerialNumber: recommended
-    Manufacturer: recommended
-    ManufacturersModelName: recommended
-    SoftwareVersions: recommended
+    DeviceSerialNumber: optional
+    Manufacturer: optional
+    ManufacturersModelName: optional
+    SoftwareVersions: optional
 
 PhysioTypeRecommended:
   selectors:
@@ -53,13 +52,13 @@ EyeTrack:
   fields:
     RecordedEye: required
     SampleCoordinateSystem: required
-    AverageCalibrationError: recommended
-    CalibrationCount: recommended
-    CalibrationPosition: recommended
-    CalibrationType: recommended
-    CalibrationUnit: recommended
-    EyeTrackerDistance: recommended
-    EyeTrackingMethod: recommended
-    MaximalCalibrationError: recommended
-    PupilFitMethod: recommended
-    RawDataFilters: recommended
+    AverageCalibrationError: optional
+    CalibrationCount: optional
+    CalibrationPosition: optional
+    CalibrationType: optional
+    CalibrationUnit: optional
+    EyeTrackerDistance: optional
+    EyeTrackingMethod: optional
+    MaximalCalibrationError: optional
+    PupilFitMethod: optional
+    RawDataFilters: optional
