Squashing BEP032 state in preparation for review (#2305)
* Add first BEP032 objects

* Add ephys modality, start adding _channels but ran into a question on _acq-

* Add _acq- to ephys, add  _channels and _coords

* Draft for probes TSV file

* Fix preferably typo

* Comment out not yet defined iephys and add ephys to datatypes where it was missing

* Added probes file

* Describe modality/datatype as "Microelectrode Electrophysiology"

otherwise "Electrophysiology" is too broad. Thanks @dorahermes for the note

* Remove iephys entirely since I think it was just inspired by DANDI layout not BEP032

* Initial content for ephys document and initial filename template tree

* pacify pre-commit

* add to TOC

* semantic line break and fix

* Addressed minor left over lint complains

* Add "Microelectrode" specialization for Electrophysiology in the context menu

* Fix up for bad latin and adjust wording a bit

* Replace fancy unicode “ with simple " .

I think this is what might have freaked out `schemacode_ci / windows-latest with Python 3 (pull_request) ` (windows only!) fails with a bunch of

```
2024-04-19T19:13:44.2815607Z self = <encodings.cp1252.IncrementalDecoder object at 0x0000028D6A14D850>
2024-04-19T19:13:44.2818292Z input = b'---\nHED:\n  name: HED\n  display_name: HED Tag\n  description: |\n    Hierarchical Event Descriptor (HED) Tag.\n   ...ed or ideal position along the z axis.\n  anyOf:\n    - type: number\n    - type: string\n      enum:\n        - n/a\n'
2024-04-19T19:13:44.2820386Z final = True
2024-04-19T19:13:44.2820609Z
2024-04-19T19:13:44.2820821Z     def decode(self, input, final=False):
2024-04-19T19:13:44.2821664Z >       return codecs.charmap_decode(input,self.errors,decoding_table)[0]
2024-04-19T19:13:44.2823260Z E       UnicodeDecodeError: 'charmap' codec can't decode byte 0x9d in position 2105: character maps to <undefined>
2024-04-19T19:13:44.2824229Z
2024-04-19T19:13:44.2824768Z C:\hostedtoolcache\windows\Python\3.12.3\x64\Lib\encodings

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -74,7 +74,7 @@ bvec:
 
 channels:
   selectors:
-    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg', 'nirs', 'motion', 'optodes'])
+    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg', 'nirs', 'motion', 'optodes', 'ecephys', 'icephys'])
     - extension != '.json'
   target:
     suffix: channels
@@ -83,16 +83,18 @@ channels:
 
 coordsystem:
   selectors:
-    - intersects([suffix], ['eeg', 'ieeg', 'meg', 'nirs', 'motion', 'electrodes', 'optodes'])
+    - intersects([suffix], ['eeg', 'ieeg', 'meg', 'nirs', 'motion', 'electrodes', 'optodes', 'ecephys', 'icephys'])
     - extension != '.json'
   target:
     suffix: coordsystem
     extension: .json
+    entities:
+      - space
   inherit: true
 
 electrodes:
   selectors:
-    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg'])
+    - intersects([suffix], ['eeg', 'emg', 'ieeg', 'meg', 'ecephys', 'icephys'])
     - extension != '.json'
   target:
     suffix: electrodes
@@ -100,6 +102,14 @@ electrodes:
     entities:
       - space
   inherit: true
+
+probes:
+  selectors:
+    - intersects([suffix], ['ecephys', 'icephys'])
+    - extension != '.json'
+  target:
+    suffix: probes
+    extension: .tsv
 
 coordsystems:
   selectors:
