--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
           - Near-Infrared Spectroscopy: modality-specific-files/near-infrared-spectroscopy.md
           - Motion: modality-specific-files/motion.md
           - Magnetic Resonance Spectroscopy: modality-specific-files/magnetic-resonance-spectroscopy.md
+          - Microelectrode Electrophysiology: modality-specific-files/microelectrode-electrophysiology.md
           - Electromyography: modality-specific-files/electromyography.md
       - Derivatives:
           - BIDS Derivatives: derivatives/introduction.md
@@ -45,6 +46,7 @@ nav:
           - MEG file formats: appendices/meg-file-formats.md
           - MEG systems: appendices/meg-systems.md
           - Coordinate systems: appendices/coordinate-systems.md
+          - Microelectrode surgical coordinates: appendices/microelectrode-surgical-coordinates.md
           - Quantitative MRI: appendices/qmri.md
           - Arterial Spin Labeling: appendices/arterial-spin-labeling.md
           - Cross modality correspondence: appendices/cross-modality-correspondence.md
