--- a/src/schema/rules/files/raw/events.yaml
+++ b/src/schema/rules/files/raw/events.yaml
@@ -16,6 +16,18 @@ events:
 # Specializations
 # In these rules, we use $ref to retrieve most of an object, and then override
 
+events__microephys:
+  $ref: rules.files.raw.events.events
+  datatypes:
+    - ecephys
+    - icephys
+  entities:
+    subject: required
+    session: optional
+    sample: optional
+    task: optional
+    acquisition: optional
+    run: optional
 events__emg:
   $ref: rules.files.raw.events.events
   datatypes:
